; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ec_internal_test.c_field_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ec_internal_test.c_field_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @field_tests to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @field_tests(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* null, i32** %8, align 8
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  store i32* null, i32** %12, align 8
  store i32 0, i32* %13, align 4
  %14 = call i32* (...) @BN_CTX_new()
  store i32* %14, i32** %8, align 8
  %15 = call i32 @TEST_ptr(i32* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %90

18:                                               ; preds = %3
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @BN_CTX_start(i32* %19)
  %21 = load i32*, i32** %8, align 8
  %22 = call i32* @BN_CTX_get(i32* %21)
  store i32* %22, i32** %9, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = call i32* @BN_CTX_get(i32* %23)
  store i32* %24, i32** %10, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i32* @BN_CTX_get(i32* %25)
  store i32* %26, i32** %11, align 8
  %27 = call i32 @TEST_ptr(i32* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %76

29:                                               ; preds = %18
  %30 = load i32*, i32** %5, align 8
  %31 = call i32* @EC_GROUP_new(i32* %30)
  store i32* %31, i32** %12, align 8
  %32 = call i32 @TEST_ptr(i32* %31)
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %76

34:                                               ; preds = %29
  %35 = load i8*, i8** %6, align 8
  %36 = load i32, i32* %7, align 4
  %37 = load i32*, i32** %9, align 8
  %38 = call i32 @BN_bin2bn(i8* %35, i32 %36, i32* %37)
  %39 = call i32 @TEST_true(i32 %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %76

41:                                               ; preds = %34
  %42 = load i8*, i8** %6, align 8
  %43 = load i32, i32* %7, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i8, i8* %42, i64 %44
  %46 = load i32, i32* %7, align 4
  %47 = load i32*, i32** %10, align 8
  %48 = call i32 @BN_bin2bn(i8* %45, i32 %46, i32* %47)
  %49 = call i32 @TEST_true(i32 %48)
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %76

51:                                               ; preds = %41
  %52 = load i8*, i8** %6, align 8
  %53 = load i32, i32* %7, align 4
  %54 = mul nsw i32 2, %53
  %55 = sext i32 %54 to i64
  %56 = getelementptr inbounds i8, i8* %52, i64 %55
  %57 = load i32, i32* %7, align 4
  %58 = load i32*, i32** %11, align 8
  %59 = call i32 @BN_bin2bn(i8* %56, i32 %57, i32* %58)
  %60 = call i32 @TEST_true(i32 %59)
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %76

62:                                               ; preds = %51
  %63 = load i32*, i32** %12, align 8
  %64 = load i32*, i32** %9, align 8
  %65 = load i32*, i32** %10, align 8
  %66 = load i32*, i32** %11, align 8
  %67 = load i32*, i32** %8, align 8
  %68 = call i32 @EC_GROUP_set_curve(i32* %63, i32* %64, i32* %65, i32* %66, i32* %67)
  %69 = call i32 @TEST_true(i32 %68)
  %70 = icmp ne i32 %69, 0
  br i1 %70, label %71, label %76

71:                                               ; preds = %62
  %72 = load i32*, i32** %12, align 8
  %73 = load i32*, i32** %8, align 8
  %74 = call i32 @group_field_tests(i32* %72, i32* %73)
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %77, label %76

76:                                               ; preds = %71, %62, %51, %41, %34, %29, %18
  br label %78

77:                                               ; preds = %71
  store i32 1, i32* %13, align 4
  br label %78

78:                                               ; preds = %77, %76
  %79 = load i32*, i32** %8, align 8
  %80 = call i32 @BN_CTX_end(i32* %79)
  %81 = load i32*, i32** %8, align 8
  %82 = call i32 @BN_CTX_free(i32* %81)
  %83 = load i32*, i32** %12, align 8
  %84 = icmp ne i32* %83, null
  br i1 %84, label %85, label %88

85:                                               ; preds = %78
  %86 = load i32*, i32** %12, align 8
  %87 = call i32 @EC_GROUP_free(i32* %86)
  br label %88

88:                                               ; preds = %85, %78
  %89 = load i32, i32* %13, align 4
  store i32 %89, i32* %4, align 4
  br label %90

90:                                               ; preds = %88, %17
  %91 = load i32, i32* %4, align 4
  ret i32 %91
}

declare dso_local i32 @TEST_ptr(i32*) #1

declare dso_local i32* @BN_CTX_new(...) #1

declare dso_local i32 @BN_CTX_start(i32*) #1

declare dso_local i32* @BN_CTX_get(i32*) #1

declare dso_local i32* @EC_GROUP_new(i32*) #1

declare dso_local i32 @TEST_true(i32) #1

declare dso_local i32 @BN_bin2bn(i8*, i32, i32*) #1

declare dso_local i32 @EC_GROUP_set_curve(i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @group_field_tests(i32*, i32*) #1

declare dso_local i32 @BN_CTX_end(i32*) #1

declare dso_local i32 @BN_CTX_free(i32*) #1

declare dso_local i32 @EC_GROUP_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
